# ConnectednessPortfolio

./: README.md  code.ipynb  data.csv  main.ipynb  pyproject.toml  requirements.txt
